--- a/src/app/(default-layout)/profile/index.module.scss
+++ b/src/app/(default-layout)/profile/index.module.scss
@@ -126,4 +126,9 @@
 {
     padding-left: 64px;
     padding-right: 64px;
+
+    @include mobile
+    {
+        width: 100%;
+    }
 }
