--- a/src/components/core/Button/index.module.scss
+++ b/src/components/core/Button/index.module.scss
@@ -112,7 +112,7 @@
 .button--md
 {
     padding: 0px .9rem;
-    gap: 8px;
+    gap: .5rem;
 
     &.buttonIcon
     {
